syntax = "proto2";

package protobuf;

message Transactions {
    repeated Transaction txs = 1;
}

message Transaction {
    required uint32 version = 1;
    required uint32 type = 2;
    required TransactionFrom from = 3;
    required TransactionTo to = 4;
    repeated bytes sign = 5;
    optional bytes data = 6;

}

message FromCoin {
    required bytes id = 1;
    repeated Ticket ticket = 2 ;
}

message TransactionFrom {
    repeated FromCoin coins = 1;
}

message ToCoin {
    required bytes id = 1;
    required bytes value = 2;
}

message TransactionTo {
    repeated ToCoin coins = 1;
}

message Ticket {
    required bytes txid = 1;
	required uint32 index = 2;
}
